--- a/assets/default/css/home.css
+++ b/assets/default/css/home.css
@@ -1,6 +1,8 @@
 @charset "utf-8";
 /* CSS Document */
-
+.section {
+    padding: 3rem 0;
+}
 .home-banner{
 	background-color: var(--siteColor);
 	color:#000;
