--- a/assets/default/css/style.css
+++ b/assets/default/css/style.css
@@ -831,9 +831,15 @@ ul.totalList > li > span {
 }
 .job-listing h4.job-listing-title {
 	max-width:300px;
-	text-overflow: ellipsis;
-	white-space: nowrap;
-	overflow:hidden
+	display: -webkit-box;
+    height: 24px;
+    -webkit-line-clamp: 1;
+    -webkit-box-orient: vertical;
+    overflow: hidden;
+    text-overflow: ellipsis;
+}
+.dashboard-box .job-listing h4.job-listing-title {
+    max-width: 80%;
 }
 .job-listing .job-listing-description p {
 	overflow: hidden;
@@ -1166,7 +1172,7 @@ ul.display-inline li {
 .header-widget ul.display-inline > li > a{
 	color:#000;
 	font-family:'FSJoey', Helvetica, sans-serif;
-	font-size: 1.125rem;
+	font-size: 1.063rem;
 }
 .header-widget ul.display-inline > li > a:hover{
 	color:var(--siteColor);
@@ -1225,8 +1231,27 @@ ul.list-group-0 > li{
     border-radius: 50%;
 	display: inline-block;
 }
-
-
+.messages-headline h4 > a,
+.messages-headline p > a{
+	color:#333;
+}
+.help-text {
+    color: #777;
+    font-size: 0.875rem;
+    font-style: italic;
+}
+.single_ctinfo {
+	background-color:#fff;
+    box-shadow: 0 1px 3px rgba(0, 0, 0, 0.1);
+    border-radius: 0.25rem;
+	margin-bottom: 1.5rem;
+    padding: 0.75rem 1rem;
+}
+.ctinfo_icon {
+    margin-right: 1rem;
+    color:var(--siteColor);
+    font-size: 2.5rem;
+}
 
 
 
