--- a/assets/default/css/theme.css
+++ b/assets/default/css/theme.css
@@ -6244,6 +6244,13 @@ color: #ffc600;
 .keyword-text {
 	padding-left: 12px;
 }
+.inviteContaintag{
+	height: auto;
+}
+.inviteContaintag .keyword-text{
+	padding-left: 0;
+	padding-right: 12px;
+}
 .keyword .keyword-remove:before {
 	display: inline-block;
 	cursor: pointer;
