--- a/assets/default/css/responsive.css
+++ b/assets/default/css/responsive.css
@@ -43,6 +43,9 @@ html {
 	.language-switcher.bootstrap-select.btn-group button {
 		border-color: transparent;
 	}
+	.dashboard-content-inner {
+		min-height: 720px;
+	}
 }
 
 @media only screen and (min-width: 1200px) {
